--- a/sample/TheoreticalTargetValuePrediction_TopTaxo.yml
+++ b/sample/TheoreticalTargetValuePrediction_TopTaxo.yml
@@ -1,7 +1,7 @@
 link:
-- link:
+- nodename: raiseMaterialsList
+  nodetype: function
+  linktype: is-a
+  link:
   - nodename: RandomSelection
   - nodename: IntutuionSelection
-  linktype: is-a
-  nodename: raiseMaterialsList
-  nodetype: function
