--- a/sample/Understand_taxo.yml
+++ b/sample/Understand_taxo.yml
@@ -1,7 +1,7 @@
 link:
-- link:
+- nodename: UnderstandRegressionModel
+  nodetype: function
+  linktype: is-a
+  link:
   - nodename: VisualizedImportance
     nodetype: parts
-  linktype: is-a
-  nodename: UnderstandRegressionModel
-  nodetype: function
