unified file format v2.4

--- a/sample/MaterialsList_CrystalCandidatesTaxo.yml
+++ b/sample/MaterialsList_CrystalCandidatesTaxo.yml
@@ -1,7 +1,9 @@
-link:
-- nodename: NewsetCrystal
-  nodetype: parts
-  linktype: is-a
-  link:
-  - nodename: ParticleSwarm
-  - nodename: GeneticAlgorithm
+linkset:
+  block:
+  - link:
+    - nodename: NewsetCrystal
+      nodetype: parts
+      linktype: is-a
+      link:
+      - nodename: ParticleSwarm
+      - nodename: GeneticAlgorithm
