--- a/sample/AtomicProperty_CausTopTaxo.yml
+++ b/sample/AtomicProperty_CausTopTaxo.yml
@@ -46,12 +46,13 @@ linkset:
         link:
         - nodename: numberOfElectron
         - nodename: averagedMass
-      - nodename: fundamentalAtomicPropertyQuantity
-        nodetype: parts
-        linktype: is-a
-        link:
-        - nodename: numberOfElectron
-        - nodename: averagedMass
+        - nodename: isotopeMass 
+#      - nodename: fundamentalAtomicPropertyQuantity
+#        nodetype: parts
+#        linktype: is-a
+#        link:
+#        - nodename: numberOfElectron
+#        - nodename: averagedMass
       - nodename: PeriodictablePropertyQuantity
         linktype: is-a
         link:
@@ -62,34 +63,34 @@ linkset:
         linktype: is-a
         link:
         - nodename: TheoreticalLength
-          nodetype: parts
-          linktype: is-a
-          link:
-          - nodename: r2
-          - nodename: r2_s
-          - nodename: r2_p
-          - nodename: r2_d
-          - nodename: r2_f
-        - nodename: TheoreicalEnergy
-          nodetype: parts
-          linktype: is-a
-          link:
-          - nodename: TotalEnergy
-          - nodename: sOrbitalEnergy
-          - nodename: pOrbitalEnergy
-          - nodename: dOrbitalEnergy
-          - nodename: fOrbitalEnergy
+#          nodetype: parts
+#          linktype: is-a
+#          link:
+#          - nodename: r2
+#          - nodename: r2_s
+#          - nodename: r2_p
+#          - nodename: r2_d
+#          - nodename: r2_f
+        - nodename: TheoreticalEnergy
+#          nodetype: parts
+#          linktype: is-a
+#          link:
+#          - nodename: TotalEnergy
+#          - nodename: sOrbitalEnergy
+#          - nodename: pOrbitalEnergy
+#          - nodename: dOrbitalEnergy
+#          - nodename: fOrbitalEnergy
         - nodename: AngularMomentum
           nodetype: parts
           linktype: is-a
           link:
           - nodename: 3dAngularMomentum
-            nodetype: parts
-            linktype: is-a
-            link:
-            - nodename: S3d
-            - nodename: L3d
-            - nodename: J3d
+#            nodetype: parts
+#            linktype: is-a
+#            link:
+#            - nodename: S3d
+#            - nodename: L3d
+#            - nodename: J3d
           - nodename: 4fAngularMomentum
             nodetype: parts
             linktype: is-a
