--- a/sample/Group_FeatureSubset.yml
+++ b/sample/Group_FeatureSubset.yml
@@ -5,58 +5,27 @@ workflow:
     order: workflow
     list:
     - group:
+      - outputname: FeatureGroups
+        outputtype: parts
+    - group:
+      - methodname: ClusteringFeatureSubgroup(sameAs-DescriptorOfAllData-FeatureGroupCandidate)
+        outputname: FeatureSubgroupCandidates
+        outputtype: parts
+    - group:
+      - methodname: DomainknowledgeDataScienceClusteringSelection(subgroup)
+        outputname: FeatureSubgroups
+        outputtype: parts
+
+  - blockname: domainknowledgeSubgroup
+    order: workflow
+    list:
+    - group:
       - methodname: DomainKnowledge
         methodtype: method
-        outputname: getDomainKnowledge
+        outputname: getDomainKnowledge(subgroup)
         outputtype: function
-      - outputname: FeatureGroups
-        outputtype: parts
-
     - group:
-      - methodname: domainknowledgeSubgroupSelection
+      - methodname: DomainknowledgeDataScienceClusteringSelection(subgroup)
         outputname: FeatureSubgroups
         outputtype: parts
-  - blockname: DendrogramSubgroupSelection
-    order: workflow
-    list:
-    - group:
-      - outputname: FeatureGroups
-        outputtype: parts
-    - group:
-      - methodname: chooseFeatureSubgroupDistanceThresholdAll
-        methodtype: function
-        outputname: FeatureSubgroupDistanceThresholdAll
-        outputtype: parts
-#      - methodname: genFeatureGroupDendrogram
-#        methodtype: function
-#        outputname: FeatureGroupDendrogram
-#        outputtype: parts
-    - group:
-      - methodname: DendrogramSubgroupsSelection
-        outputname: FeatureSubgroups
-        outputtype: parts
-
-  - blockname: DendrogramSubgroupSelection
-    order: workflow
-    list:
-    - group:
-      - outputname: FeatureGroups
-        outputtype: parts
-    - group:
-      - methodname: FeaturekMeansClustering(subgroup)
-        outputname: FeatureSubgroups
-        outputtype: parts
-
-
-  - blockname: DendrogramSubgroupSelection
-    order: workflow
-    list:
-    - group:
-      - outputname: FeatureGroups
-        outputtype: parts
-    - group:
-      - methodname: FeatureGMMClustering(subgroup)
-        outputname: FeatureSubgroups
-        outputtype: parts
-
 
