add attribute to Importance

--- a/sample/Importance_ExhaustiveSearchDOS.yml
+++ b/sample/Importance_ExhaustiveSearchDOS.yml
@@ -1,17 +1,38 @@
 workflow:
   format: v2.3
   block:
+  - blockname: StrongDOS
+    order: workflow
+    list:
+    - group:
+      - outputname: AllPredictionModels
+        outputtype: parts
+    - group:
+      - methodname: AttributeScoreOfAllPredictionModels
+        methodtype: method
+        outputname: ScoreOfAllPredictionModels
+        outputtype: parts
+
+  - blockname: StrongDOS
+    order: workflow
+    list:
+    - group:
+      - outputname: AllPredictionModelsExceptGroup
+        outputtype: parts
+    - group:
+      - methodname: AttributeScoreOfAllPredictionModelsExceptGroup
+        methodtype: method
+        outputname: ScoreOfAllPredictionModelsExceptGroup
+        outputtype: parts
+
+
   - blockname: strongDOS
     order: workflow
     list:
     - group:
-      - methodname: ChooseAllModelsExceptGroup
-        methodtype: function
-        outputname: AllModelsExceptGroup
+      - outputname: ScoreOfAllPredictionModelsExceptGroup
         outputtype: parts
-      - methodname: generateAllModels
-        methodtype: function
-        outputname: AllModels
+      - outputname: ScoreOfAllPredictionModels
         outputtype: parts
     - group:
       - methodname: VisualizeStrongRelevanceDOS
@@ -22,13 +43,21 @@ workflow:
     order: workflow
     list:
     - group:
-      - methodname: ChooseAllModelsExceptGroupWithSubgroup
-        methodtype: function
-        outputname: AllModelsExceptGroupWithSubgroup
+      - outputname: AllPredictionModelsExceptGroupWithSubgroup
         outputtype: parts
-      - methodname: ChooseAllModelsExceptGroup
-        methodtype: function
-        outputname: AllModelsExceptGroup
+    - group:
+      - methodname: AtrributeScoreOfAllPredictionModelsExceptGroupWithSubgroup
+        methodtype: method
+        outputname: ScoreOfAllPredictionModelsExceptGroupWithSubgroup
+        outputtype: parts
+
+  - blockname: weakDOS
+    order: workflow
+    list:
+    - group:
+      - outputname: ScoreOfAllPredictionModelsExceptGroupWithSubgroup
+        outputtype: parts
+      - outputname: ScoreOfAllPredictionModelsExceptGroup
         outputtype: parts
     - group:
       - methodname: VisualizeWeakRelevanceDOS
