--- a/sample/EXSparseModel.yml
+++ b/sample/EXSparseModel.yml
@@ -5,7 +5,7 @@ workflow:
     order: workflow
     list:
     - group:
-      - outputname: AllModels
+      - outputname: AllPredictionModels
         outputtype: parts
     - group:
       - methodname: chooseModelByMaxScore
